--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,9 +1,9 @@
 <table>
   <tr>
-    <td><%= link_to "ホーム", home_index_path %></td>
+    <td><%= link_to "ホーム", root_path %></td>
     <% if user_signed_in? %>
       <td>|</td>
-      <td><%= link_to "マイページ", users_show_path %></td>
+      <td><%= link_to "マイページ", edit_user_registration_path %></td>
       <td>|</td>
       <td><%= link_to "ログアウト", destroy_user_session_path, method: :DELETE %></td>
     <% else %>
