--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,38 +6,58 @@
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  </div><br />
+
+  <div class="field">
+    <%= f.label :ユーザー名 %><br />
+    <%= f.text_field :user_name %>
+  </div><br />
+
+  <div class="field">
+    <%= f.label :生年月日 %><br />
+    <%= f.date_select :birthday %>
+  </div><br />
+
+  <div class="field">
+    <%= f.label :性別 %><br />
+    <%= f.select :sex, User.sexes.keys %>
+  </div><br />
+
+  <div class="field">
+    <%= f.label :学校名 %><br />
+    <%= f.text_field :school_name %>
+  </div><br />
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
   <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.label :新しいパスワード %> <i>(変更しない場合は空欄)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
     <% if @minimum_password_length %>
       <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+      <em><%= @minimum_password_length %> 文字以上</em>
     <% end %>
-  </div>
+  </div><br />
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :新しいパスワード（再入力） %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+  </div><br />
 
   <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.label :現在のパスワード %> <i>(必須)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
+  </div><br />
 
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
+<h3>アカウントの削除</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p><%= button_to "Delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
