--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,20 +6,40 @@
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  </div><br />
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :ユーザー名 %><br />
+    <%= f.text_field :user_name %>
+  </div><br />
+
+  <div class="field">
+    <%= f.label :生年月日 %><br />
+    <%= f.date_select :birthday %>
+  </div><br />
+
+  <div class="field">
+    <%= f.label :性別 %><br />
+    <%= f.select :sex, User.sexes.keys %>
+  </div><br />
+
+  <div class="field">
+    <%= f.label :学校名 %><br />
+    <%= f.text_field :school_name %>
+  </div><br />
+
+  <div class="field">
+    <%= f.label :パスワード %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %> 文字以上)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+  </div><br />
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :パスワード（再入力） %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+  </div><br />
 
   <div class="actions">
     <%= f.submit "Sign up" %>
