--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -28,6 +28,11 @@
     <%= f.text_field :school_name %>
   </div><br />
 
+  <div class="field">
+    <%= f.label :ロール %><br />
+    <%= f.select :role, User.roles.keys %>
+  </div><br />
+
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
