--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,6 +29,11 @@
   </div><br />
 
   <div class="field">
+    <%= f.label :ロール %><br />
+    <%= f.select :role, User.roles.keys %>
+  </div><br />
+
+  <div class="field">
     <%= f.label :パスワード %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> 文字以上)</em>
