--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
       <td>|</td>
       <td><%= link_to "ユーザー一覧", users_path %></td>
       <td>|</td>
-      <td><%= link_to "自分の面接一覧", interviews_path(current_user.id) %></td>
+      <td><%= link_to "自分の面接一覧", interviews_path( params: { id: current_user.id } ) %></td>
       <td>|</td>
       <td><%= link_to "ログアウト", destroy_user_session_path, method: :DELETE %></td>
     <% else %>
