--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,7 +13,7 @@
       <td><%= user.email %></td>
       <td><%= user.sex %></td>
       <td><%= user.school_name %></td>
-      <td><%= link_to "面接一覧", interviews_path(user) %></td>
+      <td><%= link_to "面接一覧", interviews_path( params: { id: user.id } ) %></td>
     </tr>
   <% end %>
 </table>
