--- a/app/views/interviews/index.html.erb
+++ b/app/views/interviews/index.html.erb
@@ -9,8 +9,23 @@
     <tr>
       <td><%= interview.date.strftime("%Y/%m/%d %H:%M") %></td>
       <td><%= interview.status %></td>
-      <td><%= link_to "編集", edit_interview_path(interview) %></td>
-      <td><%= link_to "削除", interview, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %></td>
+      <% if current_user.role == "guest" %>
+        <td><%= link_to "編集", edit_interview_path(interview) %></td>
+        <td><%= link_to "削除", interview, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %></td>
+      <% else %>
+        <td>
+          <%= form_for (interview) do |f| %>
+            <%= f.hidden_field :status, :value => "承認" %>
+            <%= f.submit "承認" %>
+          <% end %>
+        </td>
+        <td>
+          <%= form_for (interview) do |f| %>
+            <%= f.hidden_field :status, :value => "却下" %>
+            <%= f.submit "却下" %>
+          <% end %>
+        </td>
+      <% end %>
     </tr>
   <% end %>
 </table>
