--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,9 +5,12 @@
       <td>|</td>
       <td><%= link_to "プロフィール", edit_user_registration_path %></td>
       <td>|</td>
-      <td><%= link_to "ユーザー一覧", users_path %></td>
-      <td>|</td>
-      <td><%= link_to "自分の面接一覧", interviews_path( params: { id: current_user.id } ) %></td>
+      <td>
+        <% if current_user.role == "ゲスト" %>
+          <%= link_to "自分の面接一覧", interviews_path( params: { id: current_user.id } ) %></td>
+        <% else %>
+          <td><%= link_to "ゲスト一覧", users_path %></td>
+        <% end %>
       <td>|</td>
       <td><%= link_to "ログアウト", destroy_user_session_path, method: :DELETE %></td>
     <% else %>
