--- a/app/views/interviews/index.html.erb
+++ b/app/views/interviews/index.html.erb
@@ -1,5 +1,9 @@
 <h1><%= @user[:user_name] %>の面接一覧</h1>
-<%= link_to "新規作成", new_interview_path %>
+
+<% if current_user.role == "ゲスト" %>
+  <%= link_to "新規作成", new_interview_path %>
+<% end %>
+
 <table>
   <thead>
     <th>日程</th>
