--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,7 +15,7 @@
 
   <div class="field">
     <%= f.label :生年月日 %><br />
-    <%= f.date_select :birthday %>
+    <%= f.date_select :birthday, { :use_month_numbers => true, start_year: 1980 } %>
   </div><br />
 
   <div class="field">
