--- a/app/views/interviews/new.html.erb
+++ b/app/views/interviews/new.html.erb
@@ -1,6 +1,6 @@
 <h1>新しい面接の作成</h1>
 
 <%= form_for(@interview) do |f| %>
-  <%= f.datetime_select :date %>
+  <%= f.datetime_select :date, { :use_month_numbers => true, :minute_step => 10 } %>
   <%= f.submit %>
 <% end %>
