--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,7 @@
   <thead>
     <th>ユーザー名</th>
     <th>Email</th>
+    <th>年齢</th>
     <th>性別</th>
     <th>学校名</th>
   </thead>
@@ -12,6 +13,7 @@
       <tr>
         <td><%= user.user_name %></td>
         <td><%= user.email %></td>
+        <td><%= (Date.today.strftime("%Y%m%d").to_i - user.birthday.strftime("%Y%m%d").to_i) / 10000 %></td>
         <td><%= user.sex %></td>
         <td><%= user.school_name %></td>
         <td><%= link_to "面接一覧", interviews_path( params: { id: user.id } ) %></td>
