--- a/app/views/interviews/edit.html.erb
+++ b/app/views/interviews/edit.html.erb
@@ -1,5 +1,7 @@
 <h1>面接の編集</h1>
 
+<%= render "interviews/error" %>
+
 <%= form_for(@interview) do |f| %>
   <%= f.datetime_select :date, { :use_month_numbers => true, :minute_step => 10 } %>
   <%= f.submit %>
