--- a/app/views/notice_mailer/sendmail_confirm.html.erb
+++ b/app/views/notice_mailer/sendmail_confirm.html.erb
@@ -1,5 +1,6 @@
 <h1>面接情報が更新されました</h1>
 
 <p>
-  <%= @user.user_name %>さんの面接情報が更新されました。
+  <%= @user.user_name %>さんの面接情報が更新されました。<br>
+  確認URL：<%= @url %>
 </p>
