--- a/app/views/interviews/index.html.erb
+++ b/app/views/interviews/index.html.erb
@@ -1,31 +1,7 @@
 <h1><%= @user[:user_name] %>の面接一覧</h1>
 
-<% if current_user.role == "guest" %>
-  <%= link_to "新規作成", new_interview_path %>
-<% end %>
-
-<%= form_tag interviews_path, method: :patch do %>
-  <%= submit_tag %>
-  <table>
-    <thead>
-      <th>日程</th>
-      <th>ステータス</th>
-    </thead>
-    <% @interviews.each do | interview | %>
-      <tr>
-        <td><%= interview.date.strftime("%Y/%m/%d %H:%M") %></td>
-        <td><%= interview.status %></td>
-        <% if current_user.role == "guest" %>
-          <td><%= link_to "編集", edit_interview_path(interview) %></td>
-          <td><%= link_to "削除", interview, method: :delete, data: { confirm: '本当に削除してよろしいですか？' } %></td>
-        <% else %>
-          <%= fields_for "interviews[]", interview do |fi| %>
-            <td><%= fi.radio_button :status, "保留" %>保留</td>
-            <td><%= fi.radio_button :status, "承認" %>承認</td>
-            <td><%= fi.radio_button :status, "却下" %>却下</td>
-          <% end %>
-        <% end %>
-      </tr>
-    <% end %>
-  </table>
+<% if current_user.role == "recruter" %>
+  <%= render 'interviews_recruter', interviews: @interviews %>
+<% else %>
+  <%= render 'interviews_guest', interviews: @interviews %>
 <% end %>
