--- a/app/views/interviews/show.html.erb
+++ b/app/views/interviews/show.html.erb
@@ -1,1 +1,15 @@
-<h1>面接の編集</h1>
+<h1><%= @user[:user_name] %>の過去の面接一覧</h1>
+
+<table>
+  <thead>
+    <th>日程</th>
+    <th>ステータス</th>
+  </thead>
+  <% @interviews.each do | interview | %>
+    <tr>
+      <td><%= interview.date.strftime("%Y/%m/%d %H:%M") %></td>
+      <td><%= interview.status %></td>>
+      <% end %>
+    </tr>
+  <% end %>
+</table>
