[update] interviewの表示機能をindexからshowに変更 伴って各所のリンクを修正

--- a/app/views/interviews/past_interviews.html.erb
+++ b/app/views/interviews/past_interviews.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @user[:user_name] %>の過去の面接</h1>
-<%= link_to "一覧に戻る", interviews_path(params:{ id: @user.id }) %>
+<%= link_to "一覧に戻る", interview_path(@user) %>
 <table>
   <thead>
     <th>日程</th>
