--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
       <td>|</td>
       <td>
         <% if current_user.role == "guest" %>
-          <%= link_to "自分の面接一覧", interviews_path( params: { id: current_user.id } ) %></td>
+          <%= link_to "自分の面接一覧", interview_path(@user) %></td>
         <% else %>
           <td><%= link_to "ゲスト一覧", users_path %></td>
         <% end %>
